--- a/contact-us.html
+++ b/contact-us.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Contact Us | T.E.A.M. Builders Ltd.</title>
@@ -9,24 +10,61 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Find a Home Remodeler in Cedar Falls or Cedar Rapids, IA. Hire a local home renovation pro. Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls or Cedar Rapids, IA is equipped to handle all your home renovation needs.">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-      <!-- Scripts -->
-      <script src="js/script.min.js"></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <meta name="description"
+        content="Find a Home Remodeler in Cedar Falls or Cedar Rapids, IA. Hire a local home renovation pro. Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls or Cedar Rapids, IA is equipped to handle all your home renovation needs.">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+    <!-- Scripts -->
+    <script src="js/script.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+</head>
 
-    </head>
-  <body>
+<body>
     <nav id="navbar"></nav>
     <div class="hero-nav team">
         <div class="hero-nav__inner">
@@ -35,50 +73,53 @@
         </div>
     </div>
     <div class="subpage">
-      <br />
-      <br />
-      <h2>Hire a local home renovation pro</h2>
-      <p>Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls or Cedar Rapids, IA is equipped to handle all your home renovation needs. We offer a range of interior and exterior remodeling services. You can count on us to help your home stand out.</p>
-      <br />
-      <p>Please use the form on this page to email us.</p>
-      <section id="contactus"></section>
-      <br />
-      <p>We're located at</p>
-      <h2 class="mt-0">2512 White Tail Drive, Cedar Falls, IA, 50613</h2>
-       <div class="contact-info-container">
-        <div class="address">
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <p>T.E.A.M. Builders Ltd.</p>
-          <p>Cedar Falls, IA 50613</p>
+        <br />
+        <br />
+        <h2>Hire a local home renovation pro</h2>
+        <p>Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls or Cedar Rapids, IA is
+            equipped to handle all your home renovation needs. We offer a range of interior and exterior remodeling
+            services. You can count on us to help your home stand out.</p>
+        <br />
+        <p>Please use the form on this page to email us.</p>
+        <section id="contactus"></section>
+        <br />
+        <p>We're located at</p>
+        <h2 class="mt-0">2512 White Tail Drive, Cedar Falls, IA, 50613</h2>
+        <div class="contact-info-container">
+            <div class="address">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p>T.E.A.M. Builders Ltd.</p>
+                <p>Cedar Falls, IA 50613</p>
+            </div>
+            <div class="call">
+                <i class="fa fa-mobile" aria-hidden="true"></i>
+                <p>Call Us</p>
+                <a href="tel:3194818326">(319) 481-8326</a>
+            </div>
+            <div class="hours">
+                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                <p>Hours</p>
+                <ul>
+                    <p>M-F: 8:00 AM - 5:00 PM</p>
+                    <p>S: Closed</p>
+                    <p>Su: Closed</p>
+                </ul>
+            </div>
         </div>
-        <div class="call">
-          <i class="fa fa-mobile" aria-hidden="true"></i>
-          <p>Call Us</p>
-          <a href="tel:3194818326">(319) 481-8326</a>
-        </div>
-        <div class="hours">
-          <i class="fa fa-clock-o" aria-hidden="true"></i>
-          <p>Hours</p>
-          <ul>
-            <p>M-F: 8:00 AM - 5:00 PM</p>
-            <p>S: Closed</p>
-            <p>Su: Closed</p>
-          </ul>
-        </div>
-       </div>
     </div>
     <br />
-  </div>
-  <section class="gradient-banner">
-    <div class="gradient-content">
-      <span>
-        Family owned business serving with pride. A local business you can trust.
-      </span>
-      <div class="triangle"></div>
-      <a class="btn btn-secondary" href="/about-t-e-a-m-builders">About Us</a>
     </div>
-  </section>
-  <footer id="footer">
-  </footer>
-  </body>
+    <section class="gradient-banner">
+        <div class="gradient-content">
+            <span>
+                Family owned business serving with pride. A local business you can trust.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/about-t-e-a-m-builders">About Us</a>
+        </div>
+    </section>
+    <footer id="footer">
+    </footer>
+</body>
+
 </html>
