--- a/fencing.html
+++ b/fencing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Fencing | T.E.A.M. Builders Ltd.</title>
@@ -9,98 +10,171 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.">
+    <meta name="description"
+        content="T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav fencing">
-    <div class="hero-nav__inner">
-        <h1>Secure Your Property With Attractive Fencing</h1>
-        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
-    </div>
-</div>
-<div class="subpage-content">
-  <h2>Get started on your fence installation project in Cedar Falls and Cedar Rapids, IA</h2>
-    <p>Are you worried about children and pets wandering off? Do you need more privacy? We can help! T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.
-    </p>
-    <p>If you’re looking for a fence that looks attractive, offers visibility and acts as a security barrier, picket fencing is the way to go. If you need more seclusion and don’t want nosey neighbors peering in, you should install a privacy fence. We have a wide variety of picket and privacy fence options to choose from.</p>
-    <p>We also offer your standard galvanized and black coated chain link. Our fencing installers can get you the most bang for your buck with a chain link fence while also providing a long term solution to keeping your kids and pets in and other critters out. Our fencing installers will secure all fence posts in concrete to ensure stability and durability for years to come.</p>
-    <p>Reach out to us right away to arrange for expert fencing services.</p>
-    <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls and Cedar Rapids, IA area. Installing a fence is a smart investment because it will:</p>
-    <br />
-    <div class="feature-container">
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Deter Trespassers</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>More Privacy</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Keep Children and Pets Enclosed</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Boost Your Curb Appeal</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Serve As a Property Line Marker</p>
-      </div>
-    </div>
-    <br />
-      <div class="text-align-left">
-          <br />
-            <div class="bg-gray">
-            <h3>Keep your kids and pets safe.</h3>
-            <p>Call <a href="tel:3194818326">319-481-8326 </a>now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.</p>
-            <br />
-            <a class="btn btn-primary" href="/contac">Contact Us</a>
-          </div>
-          <br />
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/CRTreatedWoodFence.jpg" alt="Treated Wood Fence Cedar Rapids">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/ExteriorViewTreatedWoodFence.jpg" alt="Exterior View of Treated Wood Fence">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/PlantHangingOnFence.jpg" alt="Decorative Plant Hanging on Fence">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedFenceYardView.jpg" alt="Treated Wood Fence with View of Yard">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedWoodFenceCR.jpg" alt="Treated Wood Fence in Cedar Rapids">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfence.jpg" alt="Wood Picket Fence">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfencewide.jpg" alt="Wood Picket Fence Wide View">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg" alt="Black Wire Fence">
+        <div class="hero-nav__inner">
+            <h1>Secure Your Property With Attractive Fencing</h1>
+            <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
         </div>
-      </div>
+    </div>
+    <div class="subpage-content">
+        <h2>Get started on your fence installation project in Cedar Falls and Cedar Rapids, IA</h2>
+        <p>Are you worried about children and pets wandering off? Do you need more privacy? We can help! T.E.A.M.
+            Builders Limited provides professional fence installation services in Cedar Falls and Cedar Rapids, IA and
+            surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.
+        </p>
+        <p>If you’re looking for a fence that looks attractive, offers visibility and acts as a security barrier, picket
+            fencing is the way to go. If you need more seclusion and don’t want nosey neighbors peering in, you should
+            install a privacy fence. We have a wide variety of picket and privacy fence options to choose from.</p>
+        <p>We also offer your standard galvanized and black coated chain link. Our fencing installers can get you the
+            most bang for your buck with a chain link fence while also providing a long term solution to keeping your
+            kids and pets in and other critters out. Our fencing installers will secure all fence posts in concrete to
+            ensure stability and durability for years to come.</p>
+        <p>Reach out to us right away to arrange for expert fencing services.</p>
+        <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls and Cedar Rapids, IA area.
+            Installing a fence is a smart investment because it will:</p>
+        <br />
+        <div class="feature-container">
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Deter Trespassers</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>More Privacy</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Keep Children and Pets Enclosed</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Boost Your Curb Appeal</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Serve As a Property Line Marker</p>
+            </div>
+        </div>
+        <br />
+        <div class="text-align-left">
+            <br />
+            <div class="bg-gray">
+                <h3>Keep your kids and pets safe.</h3>
+                <p>Call <a href="tel:3194818326">319-481-8326 </a>now to schedule fence installation services. Our
+                    fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of
+                    in-house financing to clients who are interested in financing options.</p>
+                <br />
+                <a class="btn btn-primary" href="/contac">Contact Us</a>
+            </div>
+            <br />
+            <h4 class="h1">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/fencing/CRTreatedWoodFence.jpg"
+                    alt="Treated Wood Fence Cedar Rapids">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/fencing/ExteriorViewTreatedWoodFence.jpg"
+                    alt="Exterior View of Treated Wood Fence">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/fencing/PlantHangingOnFence.jpg"
+                    alt="Decorative Plant Hanging on Fence">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedFenceYardView.jpg"
+                    alt="Treated Wood Fence with View of Yard">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedWoodFenceCR.jpg"
+                    alt="Treated Wood Fence in Cedar Rapids">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfence.jpg"
+                    alt="Wood Picket Fence">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfencewide.jpg"
+                    alt="Wood Picket Fence Wide View">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png"
+                    alt="Fence">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png"
+                    alt="Nichols Fence">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png"
+                    alt="Final Fence">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg"
+                    alt="Black Wire Fence">
+            </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-         Call <a href="tel:3194818326" class="phone">319-481-8326</a> now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Call <a href="tel:3194818326" class="phone">319-481-8326</a> now to schedule fence installation
+                services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide
+                variety of in-house financing to clients who are interested in financing options.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
