--- a/garages.html
+++ b/garages.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Garages in Cedar Falls, Cedar Rapids, and Surrounding Areas | T.E.A.M. Builders Ltd.</title>
@@ -10,61 +11,106 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Garages in Cedar Falls, Cedar Rapids, and surrounding areas">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-</script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-gtag('config', 'UA-188956910-1');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav garages">
-    <div class="hero-nav__inner">
-        <h1>Build your garage from the ground up!</h1>
-        <a class="btn btn-primary" href="/contact-us">Contact Us</a>
+        <div class="hero-nav__inner">
+            <h1>Build your garage from the ground up!</h1>
+            <a class="btn btn-primary" href="/contact-us">Contact Us</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-    <p>
-        T.E.A.M. Builders Ltd. can take charge of your new garage build in Cedar Falls, Cedar Rapids or surrounding areas. Whether you want to convert your boring garage into a man cave or start over brand new with high vaulted ceilings or custom designs, we have got your back! 
-        We have the tools, experience, and team needed to remodel or build your garage from the ground up!  We can reside, install a new roof,  install new flooring and lighting and tear down unwanted walls. In short, we’ll bring your dream garage to life.
+    <div class="subpage-content">
+        <p>
+            T.E.A.M. Builders Ltd. can take charge of your new garage build in Cedar Falls, Cedar Rapids or surrounding
+            areas. Whether you want to convert your boring garage into a man cave or start over brand new with high
+            vaulted ceilings or custom designs, we have got your back!
+            We have the tools, experience, and team needed to remodel or build your garage from the ground up! We can
+            reside, install a new roof, install new flooring and lighting and tear down unwanted walls. In short, we’ll
+            bring your dream garage to life.
 
-        Reach out to us right away to get started with our garage renovation services. We’ve completed a number of custom garage renovations for your Cedar Falls and Cedar Rapids neighbors. Now it’s your turn.
-    </p>
-    <br />
-    <div class="bg-gray">
-      <h2>Get in touch with us today to discuss the details of your new garage.</h3>
-      <a class="btn btn-primary" href="/contact">Contact Us</a>
-    </div>
-      <div class="text-align-left">
-          <br />
-          <h3 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
-          </div>
-      </div>
+            Reach out to us right away to get started with our garage renovation services. We’ve completed a number of
+            custom garage renovations for your Cedar Falls and Cedar Rapids neighbors. Now it’s your turn.
+        </p>
+        <br />
+        <div class="bg-gray">
+            <h2>Get in touch with us today to discuss the details of your new garage.</h3>
+                <a class="btn btn-primary" href="/contact">Contact Us</a>
+        </div>
+        <div class="text-align-left">
+            <br />
+            <h3 class="h1">Our Work</h4>
+                <div class="our-work-images">
+                    <img class="our-work-image"
+                        src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg"
+                        alt="2 Stall Garage w/ Orange Accents">
+                </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Contact us today to see how we can help construct your new garage
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Contact us today to see how we can help construct your new garage
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
