--- a/pergolas.html
+++ b/pergolas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Pergolas & Overhangs | T.E.A.M. Builders Ltd.</title>
@@ -9,102 +10,182 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.">
+    <meta name="description"
+        content="T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav pergola">
-    <div class="hero-nav__inner">
-        <h1>Relax On a Spacious Backyard Pergola</h1>
-        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
+        <div class="hero-nav__inner">
+            <h1>Relax On a Spacious Backyard Pergola</h1>
+            <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-  <h2>Make sure you hire an experienced deck and pergola builder in Cedar Falls and Cedar Rapids, IA</h2>
-    <p>Looking to add some structure and architecture to your backyard while blending the project into an existing living space? A pergola can be a great place to start!
-    </p>
-    <br />
-    <p>Generally, a pergola is a wide-open structure with four support beams, no walls, and a decorative roof design, such as a lattice.  Commonly used for shade or even a touch of shelter from the elements, options are available to add a variety of customizable features such as screens that can be added to the roof or walls and strands of lights to decorate for evening and night time.</p>
-    <br />
-    <p>T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
-    <br />
-    <h3>Benefits of pergolas</h3>
-    <div class="feature-container">
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Boost your homes value</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Add on or upgrade to gardens</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Outdoor extension of your home</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Adding Shade and Privacy</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Increase your property value with a long lasting and maintenance-free deck/pergola</p>
-      </div>
-    </div>
-    <br />
-      <div class="text-align-left">
-          <br />
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhanghomeaddition.jpg" alt="Overhang Home Addition">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhangunderside.jpg" alt="Underside of Overhang Home Addition">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhangwood.jpg" alt="Overhang with Wood Underside">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/164606794_1430176917333739_4953353958247440180_n.jpg" alt="Tall Gray Pergola">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0810.jpg" alt="Pergola Corner">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0812.jpg" alt="Pergola Corner Brackets">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0819.jpg" alt="Stained Wood Pergola Full View">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0821.jpg" alt="Stained Wood Pergola with Swing">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_1845.jpg" alt="Pergola with Shingles and Siding">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/DJI_0185.jpg" alt="Tall Gray Pergola Upward View">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/freestandingoverhang.jpeg" alt="Freestanding Pergola with Metal Base">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/freestandingoverhand2.jpeg" alt="Freestanding Pergola with Metal Base">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p4.jpg" alt="Pergola with Shingles and Siding">
-          </div>
-      </div>
+    <div class="subpage-content">
+        <h2>Make sure you hire an experienced deck and pergola builder in Cedar Falls and Cedar Rapids, IA</h2>
+        <p>Looking to add some structure and architecture to your backyard while blending the project into an existing
+            living space? A pergola can be a great place to start!
+        </p>
+        <br />
+        <p>Generally, a pergola is a wide-open structure with four support beams, no walls, and a decorative roof
+            design, such as a lattice. Commonly used for shade or even a touch of shelter from the elements, options are
+            available to add a variety of customizable features such as screens that can be added to the roof or walls
+            and strands of lights to decorate for evening and night time.</p>
+        <br />
+        <p>T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls
+            and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
+        <br />
+        <h3>Benefits of pergolas</h3>
+        <div class="feature-container">
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Boost your homes value</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Add on or upgrade to gardens</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>
+                    Outdoor extension of your home</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>
+                    Adding Shade and Privacy</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>
+                    Increase your property value with a long lasting and maintenance-free deck/pergola</p>
+            </div>
+        </div>
+        <br />
+        <div class="text-align-left">
+            <br />
+            <h4 class="h1">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhanghomeaddition.jpg"
+                    alt="Overhang Home Addition">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhangunderside.jpg"
+                    alt="Underside of Overhang Home Addition">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhangwood.jpg"
+                    alt="Overhang with Wood Underside">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/164606794_1430176917333739_4953353958247440180_n.jpg"
+                    alt="Tall Gray Pergola">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0810.jpg"
+                    alt="Pergola Corner">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0812.jpg"
+                    alt="Pergola Corner Brackets">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0819.jpg"
+                    alt="Stained Wood Pergola Full View">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0821.jpg"
+                    alt="Stained Wood Pergola with Swing">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_1845.jpg"
+                    alt="Pergola with Shingles and Siding">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/DJI_0185.jpg"
+                    alt="Tall Gray Pergola Upward View">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg"
+                    alt="Wood Home Pergola">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg"
+                    alt="Wood Home Pergola">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg"
+                    alt="Pergola with Metal Base">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/freestandingoverhang.jpeg"
+                    alt="Freestanding Pergola with Metal Base">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/freestandingoverhand2.jpeg"
+                    alt="Freestanding Pergola with Metal Base">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg"
+                    alt="Pergola with Metal Base">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p4.jpg"
+                    alt="Pergola with Shingles and Siding">
+            </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Contact us today <a href="tel:3194818326" class="green-link">319-481-8326</a> to learn more about our deck building and pergola installation services. We also offer a wide variety of in-house financing to clients who are interested in financing options.
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Contact us today <a href="tel:3194818326" class="green-link">319-481-8326</a> to learn more about our
+                deck building and pergola installation services. We also offer a wide variety of in-house financing to
+                clients who are interested in financing options.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
