--- a/shed-homes-shouses.html
+++ b/shed-homes-shouses.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Shed Homes "Shouses" | T.E.A.M. Builders Ltd.</title>
@@ -9,66 +10,121 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Shed homes, combining an open concept with high vaulted ceilings, our hybrid frame building system combines the benefits of steel and flexibility of wood that will knock out the competition of traditional pole frame wood buildings.">
+    <meta name="description"
+        content="Shed homes, combining an open concept with high vaulted ceilings, our hybrid frame building system combines the benefits of steel and flexibility of wood that will knock out the competition of traditional pole frame wood buildings.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav shed">
-    <div class="hero-nav__inner">
-        <h1>Shed Houses "Shouses"</h1>
-        <a class="btn btn-primary" href="#our-work">See Our Work</a>
+        <div class="hero-nav__inner">
+            <h1>Shed Houses "Shouses"</h1>
+            <a class="btn btn-primary" href="#our-work">See Our Work</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-  <h2>Shed Homes</h2>
-    <p>Combining an open concept with high vaulted ceilings, our hybrid frame building system combines the benefits of steel and flexibility of wood that will knock out the competition of traditional pole frame wood buildings. </p>
-    <br />
-    <p>Let us help you bring your shed home “shome” dreams to life! We have preliminary plans and footprints to help start design discussions with new clients. We offer a wide variety of truss/column layouts to fit the needs of any custom design. If you can dream it, we can build it!</p>
-    <br />
-    <p>T.E.A.M. Builders is a full service design-build general contractor. We will manage every step of the project from design conception to final installation to ensure that your schedule, budget, and quality all align with your vision and goals!</p>
-    <br />
-    <div class="bg-gray">
-      <h3>Get in touch with us today!</h3>
-      <a class="btn btn-primary" href="/contact-us">Contact Us</a>
-    </div>
-      <div class="text-align-left">
-          <br />
-          <h4 class="h1" id="our-work">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg" alt="Shed w/ Small Deck and Chairs">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
-          </div>
-      </div>
+    <div class="subpage-content">
+        <h2>Shed Homes</h2>
+        <p>Combining an open concept with high vaulted ceilings, our hybrid frame building system combines the benefits
+            of steel and flexibility of wood that will knock out the competition of traditional pole frame wood
+            buildings. </p>
+        <br />
+        <p>Let us help you bring your shed home “shome” dreams to life! We have preliminary plans and footprints to help
+            start design discussions with new clients. We offer a wide variety of truss/column layouts to fit the needs
+            of any custom design. If you can dream it, we can build it!</p>
+        <br />
+        <p>T.E.A.M. Builders is a full service design-build general contractor. We will manage every step of the project
+            from design conception to final installation to ensure that your schedule, budget, and quality all align
+            with your vision and goals!</p>
+        <br />
+        <div class="bg-gray">
+            <h3>Get in touch with us today!</h3>
+            <a class="btn btn-primary" href="/contact-us">Contact Us</a>
+        </div>
+        <div class="text-align-left">
+            <br />
+            <h4 class="h1" id="our-work">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png"
+                    alt="Farm Shed">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png"
+                    alt="Red Shed">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png"
+                    alt="Shed Loft">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg"
+                    alt="Shed w/ Small Deck and Chairs">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg"
+                    alt="2 Stall Garage w/ Orange Accents">
+            </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Get an estimate today with T.E.A.M. Builders Ltd.
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Get an estimate today with T.E.A.M. Builders Ltd.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
