--- a/event-venues.html
+++ b/event-venues.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Event Venues | T.E.A.M. Builders Ltd.</title>
@@ -9,60 +10,102 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Event Venues. Creating any size detailed and decorated building/barn for all events, such as wineries, weddings, and large group gatherings.">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-</script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
+    <meta name="description"
+        content="Event Venues. Creating any size detailed and decorated building/barn for all events, such as wineries, weddings, and large group gatherings.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-gtag('config', 'UA-188956910-1');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav event">
-    <div class="hero-nav__inner">
-        <h1>Event Venues in Cedar Falls and Cedar Rapids, IA</h1>
-        <a class="btn btn-primary" href="/contact-us">See Our Work</a>
+        <div class="hero-nav__inner">
+            <h1>Event Venues in Cedar Falls and Cedar Rapids, IA</h1>
+            <a class="btn btn-primary" href="/contact-us">See Our Work</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-  <h2>Event Venues</h2>
-    <p>Creating any size detailed and decorated building/barn for all events, such as wineries, weddings, and large group gatherings. 
-    </p>
-    <br />
-    <div class="bg-gray">
-      <h3>Get in touch with us today to discuss the details of your new event venue.</h3>
-      <a class="btn btn-primary" href="/contact">Contact Us</a>
-    </div>
-      <div class="text-align-left">
-          <br />
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-2.png">
-          </div>
-      </div>
+    <div class="subpage-content">
+        <h2>Event Venues</h2>
+        <p>Creating any size detailed and decorated building/barn for all events, such as wineries, weddings, and large
+            group gatherings.
+        </p>
+        <br />
+        <div class="bg-gray">
+            <h3>Get in touch with us today to discuss the details of your new event venue.</h3>
+            <a class="btn btn-primary" href="/contact">Contact Us</a>
+        </div>
+        <div class="text-align-left">
+            <br />
+            <h4 class="h1">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-2.png">
+            </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Contact us today to see how we can help construct your event venue
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Contact us today to see how we can help construct your event venue
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
