--- a/gutters.html
+++ b/gutters.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Gutters | T.E.A.M. Builders Ltd.</title>
@@ -9,61 +10,112 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Relax on a Spacious Backyard Deck Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA. Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time!">
+    <meta name="description"
+        content="Relax on a Spacious Backyard Deck Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA. Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time!">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav gutters">
-    <div class="hero-nav__inner">
-        <h1>Make sure you hire an experienced gutter installer or gutter guard installer in Cedar Falls and Cedar Rapids, IA</h1>
-        <a class="btn btn-primary" href="/contact-us">Contact Us</a>
+        <div class="hero-nav__inner">
+            <h1>Make sure you hire an experienced gutter installer or gutter guard installer in Cedar Falls and Cedar
+                Rapids, IA</h1>
+            <a class="btn btn-primary" href="/contact-us">Contact Us</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-  <h2>Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA</h2>
-    <p>Our experienced sales associate will meet your needs at your home, go over your material preferences and get to work designing and budgeting your new gutters and or gutter guards.  You’ll have new gutters that you love and will show off your home in no time. Our experienced staff can work with your budget and help you make the best decision that will provide the best value to your home.
-    </p>
-    <br />
-    <p>T.E.A.M. Builders LTD has experience installing gutters of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
-    <br />
-    <h3>Enjoy your home’s curb appeal </h3>
-    <p>Looking for a trustworthy gutter installer? Look no further. T.E.A.M. Builders LTD installs gutters in Cedar Falls and Cedar Rapids, IA and surrounding areas. </p>
-    <br />
-      <div class="text-align-left">
-          <br />
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls and Cedar Rapids, IA">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/man-installing-gutter.jpg" alt="T.E.A.M. Builders Contractor Installing Gutter">
+    <div class="subpage-content">
+        <h2>Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA</h2>
+        <p>Our experienced sales associate will meet your needs at your home, go over your material preferences and get
+            to work designing and budgeting your new gutters and or gutter guards. You’ll have new gutters that you love
+            and will show off your home in no time. Our experienced staff can work with your budget and help you make
+            the best decision that will provide the best value to your home.
+        </p>
+        <br />
+        <p>T.E.A.M. Builders LTD has experience installing gutters of all kinds on properties in the Cedar Falls and
+            Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
+        <br />
+        <h3>Enjoy your home’s curb appeal </h3>
+        <p>Looking for a trustworthy gutter installer? Look no further. T.E.A.M. Builders LTD installs gutters in Cedar
+            Falls and Cedar Rapids, IA and surrounding areas. </p>
+        <br />
+        <div class="text-align-left">
+            <br />
+            <h4 class="h1">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg"
+                    alt="Gutters in Cedar Falls and Cedar Rapids, IA">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/man-installing-gutter.jpg"
+                    alt="T.E.A.M. Builders Contractor Installing Gutter">
 
-          </div>
-      </div>
+            </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-         Contact us today to learn more about our gutter installation services. We also offer a wide variety of in-house financing to clients who are interested in financing options.
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Contact us today to learn more about our gutter installation services. We also offer a wide variety of
+                in-house financing to clients who are interested in financing options.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
