--- a/process.html
+++ b/process.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Process | T.E.A.M. Builders Ltd.</title>
@@ -9,161 +10,225 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Our Process. With a design + build approach to the construction process, continuous and collaborative production is at the heart of who we are. With ample time spent in the planning phase of your project we ensure a smooth transition from office to field, start to finish, and most importantly a product that you love. We understand that proper planning allows for optimum performance.">
+    <meta name="description"
+        content="Our Process. With a design + build approach to the construction process, continuous and collaborative production is at the heart of who we are. With ample time spent in the planning phase of your project we ensure a smooth transition from office to field, start to finish, and most importantly a product that you love. We understand that proper planning allows for optimum performance.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
-        <div class="hero-nav process">
-    <div class="hero-nav__inner">
-        <h1>The T.E.A.M. Builders Way</h1>
-        <a class="btn btn-primary" href="#process">See Our Process</a>
-    </div>
+    <div class="hero-nav process">
+        <div class="hero-nav__inner">
+            <h1>The T.E.A.M. Builders Way</h1>
+            <a class="btn btn-primary" href="#process">See Our Process</a>
+        </div>
     </div>
     <div class="subpage">
-      <div class="row" id="process">
+        <div class="row" id="process">
+            <div class="col mr-5">
+                <h2>Our Process</h2>
+                <p>With a design & build approach to the construction process, continuous and collaborative production
+                    is at the heart of who we are.</p>
+                <br />
+                <p>With ample time spent in the planning phase of your project we ensure a smooth transition from office
+                    to field, start to finish, and most importantly a product that you love. We understand that proper
+                    planning allows for optimum performance.
+                </p>
+                <br />
+                <p>As we collaborate to tailor a project to your budget, establish a schedule, and clarify design
+                    specifications, we understand it remains essential to streamline communication without compromise or
+                    assumptions. A simple and transparent process allows us to be in and out of your home as soon as
+                    possible with a finished product that you love.
+                </p>
+            </div>
+            <div class="col">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process-1.png"
+                    alt="T.E.A.M. Builders' Process">
+            </div>
+        </div>
+        <br />
+    </div>
+    <section class="gradient-banner">
+        <div class="gradient-content">
+            <span>
+                Family owned business serving with pride. A local business you can trust.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
+        </div>
+    </section>
+    <div class="row">
         <div class="col mr-5">
-          <h2>Our Process</h2>
-          <p>With a design & build approach to the construction process, continuous and collaborative production is at the heart of who we are.</p>
-          <br />
-          <p>With ample time spent in the planning phase of your project we ensure a smooth transition from office to field, start to finish, and most importantly a product that you love. We understand that proper planning allows for optimum performance.
-          </p>
-          <br />
-          <p>As we collaborate to tailor a project to your budget, establish a schedule, and clarify design specifications, we understand it remains essential to streamline communication without compromise or assumptions. A simple and transparent process allows us to be in and out of your home as soon as possible with a finished product that you love.
-          </p>
+            <h2>Plan</h2>
+            <p>The planning process starts the day we speak or the day we meet with you for a no-obligation/no cost
+                in-home consultation resulting in a rough estimate and a high level scope of work.</p>
+            <br />
+            <p> Dimensions are gathered as well as a quick design discovery session to ensure we have mutual
+                understanding and agreement to reach both your aesthetic and functional needs.
+            </p>
+            <div class="process-details-list">
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Phone call pre-consult to determine next steps</p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>In-home or onsite consultation with probable cost range, options, and alternatives</p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>High level scope definition and timeline</p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Cost approved and project contract executed</p>
+                </div>
+            </div>
         </div>
         <div class="col">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process-1.png" alt="T.E.A.M. Builders' Process">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/planning-image.jpg" alt="Plan">
         </div>
     </div>
-    <br />
-  </div>
-  <section class="gradient-banner">
-    <div class="gradient-content">
-      <span>
-        Family owned business serving with pride. A local business you can trust.
-      </span>
-      <div class="triangle"></div>
-      <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
+    <div class="row">
+        <div class="col mr-5">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/design-image.jpg" alt="Design">
+        </div>
+        <div class="col">
+            <h2>Design</h2>
+            <p>With the initial scope and contract executed, we dive right into your project design. Based on field
+                dimensions and plans we have created or received from you we begin exploring the possibilities and
+                potential of your space. This exercise results in floor plans (layouts) as well as elevation views
+                associated with design elements and fixtures.</p>
+            <br />
+            <p>These are not final designs, but rather general designs and directions that we could take your
+                layout/floor plan with color schemes and materials. Coupling our imagination, creativity and your input
+                we will work with selected layouts and designs you pick to make edits, changes and enhancements to
+                ensure it is entirely within your vision while tailored to your budget.
+            </p>
+            <br />
+            <p>
+                More detailed designs will be developed upon the approval of layout, design and materials. During this
+                final design phase, all materials, fixtures, appliances, custom furniture, etc. will be identified to an
+                extent we can place all necessary orders and get ready for the building phase.
+            </p>
+            <br />
+            <p>
+                Official approval and sign-off are required before any material is ordered, these signatures and
+                contracts will be managed within our database.
+            </p>
+        </div>
     </div>
-  </section>
-  <div class="row">
-    <div class="col mr-5">
-      <h2>Plan</h2>
-      <p>The planning process starts the day we speak or the day we meet with you for a no-obligation/no cost in-home consultation resulting in a rough estimate and a high level scope of work.</p>
-      <br />
-      <p> Dimensions are gathered as well as a quick design discovery session to ensure we have mutual understanding and agreement to reach both your aesthetic and functional needs.
-      </p>
-      <div class="process-details-list">
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Phone call pre-consult to determine next steps</p>
+    <div class="row">
+        <div class="col mr-5">
+            <h2>Build</h2>
+            <p>As materials are on their way, communicating material drop off locations to meet your needs will be
+                important as materials are expected to arrive on site. If your project requires demolition, a trailer or
+                dumpster bin location can be worked out prior to the project start date. You should expect us to be on a
+                home based schedule that has been communicated and approved by you.</p>
+            <br />
+            <p>
+                Our project timeline once built, will be communicated and created with the potential to absorb some
+                changes or unexpected change orders. Upon the possibility and discovery of a change order, you can
+                expect us to provide you with an immediate report on project status and potential changes in budget. All
+                change orders will require necessary signatures to move forward with a change order.
+            </p>
+            <br />
+            <p>
+                A final walk-through of the finished project is the last in-home activity where any questions or
+                concerns may be fully addressed right before you are ready to enjoy your new space.
+            </p>
+            <div class="process-details-list">
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Pre-construction on site kick-off meeting with office coordinators and crew leaders</p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Demolition</p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Construction and/or Installation</p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Clean-up, reveal and final walk-through
+                    </p>
+                </div>
+                <div class="process-list-item">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <p>Enjoy your final product!
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>In-home or onsite consultation with probable cost range, options, and alternatives</p>
+        <div class="col">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/build-image.jpg" alt="Build">
         </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>High level scope definition and timeline</p>
-        </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Cost approved and project contract executed</p>
-        </div>
-      </div>
     </div>
-    <div class="col">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/planning-image.jpg" alt="Plan">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col mr-5">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/design-image.jpg" alt="Design">
-    </div>
-    <div class="col">
-      <h2>Design</h2>
-      <p>With the initial scope and contract executed, we dive right into your project design. Based on field dimensions and plans we have created or received from you we begin exploring the possibilities and potential of your space. This exercise results in floor plans (layouts) as well as elevation views associated with design elements and fixtures.</p>
-      <br />
-      <p>These are not final designs, but rather general designs and directions that we could take your layout/floor plan with color schemes and materials. Coupling our imagination, creativity and your input we will work with selected layouts and designs you pick to make edits, changes and enhancements to ensure it is entirely within your vision while tailored to your budget.
-      </p>
-      <br />
-      <p>
-      More detailed designs will be developed upon the approval of layout, design and materials. During this final design phase, all materials, fixtures, appliances, custom furniture, etc. will be identified to an extent we can place all necessary orders and get ready for the building phase.
-      </p>
-      <br />
-      <p>
-      Official approval and sign-off are required before any material is ordered, these signatures and contracts will be managed within our database.
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col mr-5">
-      <h2>Build</h2>
-      <p>As materials are on their way, communicating material drop off locations to meet your needs will be important as materials are expected to arrive on site. If your project requires demolition, a trailer or dumpster bin location can be worked out prior to the project start date. You should expect us to be on a home based schedule that has been communicated and approved by you.</p>
-      <br />
-      <p>
-        Our project timeline once built, will be communicated and created with the potential to absorb some changes or unexpected change orders. Upon the possibility and discovery of a change order, you can expect us to provide you with an immediate report on project status and potential changes in budget. All change orders will require necessary signatures to move forward with a change order.
-      </p>
-      <br />
-      <p>
-        A final walk-through of the finished project is the last in-home activity where any questions or concerns may be fully addressed right before you are ready to enjoy your new space.
-      </p>
-      <div class="process-details-list">
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Pre-construction on site kick-off meeting with office coordinators and crew leaders</p>
-        </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Demolition</p>
-        </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Construction and/or Installation</p>
-        </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Clean-up, reveal and final walk-through
-          </p>
-        </div>
-        <div class="process-list-item">
-          <i class="fa fa-check-circle" aria-hidden="true"></i>
-          <p>Enjoy your final product!
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/build-image.jpg" alt="Build">
-    </div>
-  </div>
     <section class="gradient-banner">
-    <div class="gradient-content">
-      <span>
-        Family owned business serving with pride. A local business you can trust.
-      </span>
-      <div class="triangle"></div>
-      <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
-    </div>
-  </section>
-  <section id="contactus"></section>
-  <footer id="footer">
-  </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/script.min.js"></script>
+        <div class="gradient-content">
+            <span>
+                Family owned business serving with pride. A local business you can trust.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
+        </div>
+    </section>
+    <section id="contactus"></section>
+    <footer id="footer">
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/script.min.js"></script>
 
-  </body>
+</body>
+
 </html>
