--- a/referral.html
+++ b/referral.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Referral | T.E.A.M. Builders Ltd.</title>
@@ -11,59 +12,100 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Learn more about our referral program!">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  <script src="js/script.min.js"></script>
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+    <script src="js/script.min.js"></script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <nav id="navbar"></nav>
-        <div class="hero-nav team">
+    <div class="hero-nav team">
         <div class="hero-nav__inner">
-        <h1>Our Referral Program</h1>
-        <a class="btn btn-primary calendly-scheduler" href="tel:3194818326">Call (319) 481-8326</a>
+            <h1>Our Referral Program</h1>
+            <a class="btn btn-primary calendly-scheduler" href="tel:3194818326">Call (319) 481-8326</a>
         </div>
-        </div>
+    </div>
     <div class="subpage">
-      <div id="referral-program-container">
-        <div class="level">
-          <p><strong>Level 1: Good Neighbor Award</strong></p>
-          <p>Submit 1 qualified leads to us and receive your choice of:</p>
-          <p>$50 Visa Card</p>
-          <p>$50 Donation to a nonprofit of your choice</p>
+        <div id="referral-program-container">
+            <div class="level">
+                <p><strong>Level 1: Good Neighbor Award</strong></p>
+                <p>Submit 1 qualified leads to us and receive your choice of:</p>
+                <p>$50 Visa Card</p>
+                <p>$50 Donation to a nonprofit of your choice</p>
+            </div>
+            <div class="level">
+                <p><strong>Level 2: We're Friends</strong></p>
+                <p>Submit 3 qualified leads to us and receive your choice of:</p>
+                <p>$150 Visa Card</p>
+                <p>$200 Donation to a nonprofit of your choice</p>
+            </div>
+            <div class="level">
+                <p><strong>Level 3: We're Family</strong></p>
+                <p>Submit 5 qualified leads to us and receive your choice of:</p>
+                <p>$250 Visa Card</p>
+                <p>$300 Donation to a nonprofit of your choice</p>
+            </div>
         </div>
-        <div class="level">
-          <p><strong>Level 2: We're Friends</strong></p>
-          <p>Submit 3 qualified leads to us and receive your choice of:</p>
-          <p>$150 Visa Card</p>
-          <p>$200 Donation to a nonprofit of your choice</p>
-        </div>
-        <div class="level">
-          <p><strong>Level 3: We're Family</strong></p>
-          <p>Submit 5 qualified leads to us and receive your choice of:</p>
-          <p>$250 Visa Card</p>
-          <p>$300 Donation to a nonprofit of your choice</p>
-        </div>
-      </div>
-      <h2>It's how we say thanks!</h2>
-      <p><strong>What is a qualified lead?</strong> A qualified lead is an accepted project.</p>
-      <p><strong>What if I refer someone and there is no project accepted?</strong> A lead generated is not qualified you are still eligible to receive a $25 gift card.</p>
-      <br />
-      <div id="referral-form">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxNz6b5gSga4jtEenXubv13O0QxgFFHCdVHgQkPHgLVxumig/viewform?embedded=true" width="640" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe>      </div>
+        <h2>It's how we say thanks!</h2>
+        <p><strong>What is a qualified lead?</strong> A qualified lead is an accepted project.</p>
+        <p><strong>What if I refer someone and there is no project accepted?</strong> A lead generated is not qualified
+            you are still eligible to receive a $25 gift card.</p>
+        <br />
+        <div id="referral-form">
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLScxNz6b5gSga4jtEenXubv13O0QxgFFHCdVHgQkPHgLVxumig/viewform?embedded=true"
+                width="640" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe> </div>
     </div>
     <br />
-  <footer id="footer">
-  </footer>
-  </body>
+    <footer id="footer">
+    </footer>
+</body>
+
 </html>
