--- a/shed-homes.html
+++ b/shed-homes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Shed Homes | T.E.A.M. Builders Ltd.</title>
@@ -9,63 +10,124 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="At T.E.A.M. Builders Ltd. We aren't just skilled craftsmen, but visionaries and love helping clients dreams come to fruition. If you can dream it, we can help visualize it, and together we can build it!">
+    <meta name="description"
+        content="At T.E.A.M. Builders Ltd. We aren't just skilled craftsmen, but visionaries and love helping clients dreams come to fruition. If you can dream it, we can help visualize it, and together we can build it!">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav shed-homes">
-    <div class="hero-nav__inner">
-        <h1>Shed Homes</h1>
-        <a class="btn btn-primary" href="/contact-us">Get an estimate</a>
+        <div class="hero-nav__inner">
+            <h1>Shed Homes</h1>
+            <a class="btn btn-primary" href="/contact-us">Get an estimate</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-  <h2>Wood & Steel Hybrid</h2>
-    <p>We take the strength of steel and combine it with the flexibility of wood. As a result, we have one of the most premier building skeletons in the world!
-    </p>
-    <p>Your dream <a href="/shed-homes-shouses" class="green-link">shed home</a>, custom home, <a href="/agriculture-commercial-buildings" class="green-link">commercial/agricultural building</a>, man cave, garage/shop, and event venues can officially come to life effectively, efficiently and affordably! At T.E.A.M. Builders Ltd. We aren’t just skilled craftsmen, but visionaries and love helping clients dreams come to fruition. If you can dream it, we can help visualize it, and together we can build it!</p>
-    <br />
-      <div class="text-align-left">
-          <br />
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/create-shedhomes.png" alt="Shed Frame During Construction">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-01.jpg" alt="Shed Frame During Construction">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-02.png" alt="Shed Frame During Construction">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-03.png" alt="Shed Building">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg" alt="Shed w/ Small Deck and Chairs">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
-          </div>
-      </div>
+    <div class="subpage-content">
+        <h2>Wood & Steel Hybrid</h2>
+        <p>We take the strength of steel and combine it with the flexibility of wood. As a result, we have one of the
+            most premier building skeletons in the world!
+        </p>
+        <p>Your dream <a href="/shed-homes-shouses" class="green-link">shed home</a>, custom home, <a
+                href="/agriculture-commercial-buildings" class="green-link">commercial/agricultural building</a>, man
+            cave, garage/shop, and event venues can officially come to life effectively, efficiently and affordably! At
+            T.E.A.M. Builders Ltd. We aren’t just skilled craftsmen, but visionaries and love helping clients dreams
+            come to fruition. If you can dream it, we can help visualize it, and together we can build it!</p>
+        <br />
+        <div class="text-align-left">
+            <br />
+            <h4 class="h1">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/create-shedhomes.png"
+                    alt="Shed Frame During Construction">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-01.jpg"
+                    alt="Shed Frame During Construction">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-02.png"
+                    alt="Shed Frame During Construction">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png"
+                    alt="Red Shed">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png"
+                    alt="Farm Shed">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-03.png"
+                    alt="Shed Building">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg"
+                    alt="Shed w/ Small Deck and Chairs">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg"
+                    alt="2 Stall Garage w/ Orange Accents">
+            </div>
+        </div>
     </div>
     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Don’t delay your remodeling project any longer. Contact us today to get started on your building or renovation project in Cedar Falls and Cedar Rapids, IA.
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
-      </div>
+        <div class="gradient-content">
+            <span>
+                Don’t delay your remodeling project any longer. Contact us today to get started on your building or
+                renovation project in Cedar Falls and Cedar Rapids, IA.
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
