--- a/siding.html
+++ b/siding.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Siding | T.E.A.M. Builders Ltd.</title>
@@ -9,126 +10,211 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls and Cedar Rapids, IA area. You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly.">
+    <meta name="description"
+        content="T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls and Cedar Rapids, IA area. You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
-   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-   gtag('config', 'UA-188956910-1');
-   </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
-  <body>
-    <!-- <div id="preloader"></div> -->
+        gtag('config', 'UA-188956910-1');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '558217371893197');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=558217371893197&ev=PageView
+    &noscript=1" />
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");
+    </script>
+</head>
+
+<body>
     <nav id="navbar"></nav>
     <div class="hero-nav siding">
-    <div class="hero-nav__inner">
-        <h1>Give Your Home a Whole New Look</h1>
-        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
+        <div class="hero-nav__inner">
+            <h1>Give Your Home a Whole New Look</h1>
+            <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
+        </div>
     </div>
-</div>
-<div class="subpage-content">
-  <h2>Arrange for siding installation in Cedar Falls and Cedar Rapids, IA</h2>
-    <video class="siding-video" controls>
-       <source src="https://teambuilders-media.s3.us-east-2.amazonaws.com/siding.mp4" type="video/mp4">
-       Your browser does not support the video tag.
-    </video>
-    <div class="steps-container">
+    <div class="subpage-content">
+        <h2>Arrange for siding installation in Cedar Falls and Cedar Rapids, IA</h2>
+        <video class="siding-video" controls>
+            <source src="https://teambuilders-media.s3.us-east-2.amazonaws.com/siding.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="steps-container">
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/snap-photos.png" alt="Snap Photos">
             <h2>Snap a Few Photos</h2>
             <p>Using a mobile app to take 8 photos capturing each angle of your home.</p>
 
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/receive-the-measurements.png" alt="Receive the Measurements">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/receive-the-measurements.png"
+                alt="Receive the Measurements">
             <h2>Receive the Measurements</h2>
             <p>Once the report is created we can see all measurements for roofing and siding</p>
 
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/design-in-3d.png" alt="Design in 3D">
             <h2>Design in 3D</h2>
             <p>Allow us to help visualize your house with both color and material and give you a free quote</p>
+        </div>
+        <p>Have you grown to hate the appearance of your outdated siding? It’s time to replace it. T.E.A.M. Builders LTD
+            specializes in siding installation and repair services in the Cedar Falls and Cedar Rapids, IA area.
+        </p>
+        <br />
+        <p>You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches
+            your home perfectly. We also specialize in adding stone wainscoting and shake peakes on gables for
+            additional curb appeal to the exterior of your home. Look no further as we also provide siding design
+            services to show you what your home will look like with the use of our siding installers.</p>
+        <br />
+        <h3>The Norandex vinyl siding and Versetta stone wainscoting we install:</h3>
+        <div class="feature-container">
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Comes in a wide variety of colors and textures</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>Is durable and requires little maintenance</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>
+                    Can reduce your energy bills</p>
+            </div>
+            <div class="feature">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                <p>
+                    Will protect your home from the elements</p>
+            </div>
+        </div>
+        <p>Get in touch with us today to speak with a siding contractor and schedule vinyl siding installation services.
+            Call (319) 481-8326</p>
+        <br />
+        <div class="text-align-left">
+            <br />
+            <h4 class="h1">Boost Your Curb Appeal With New Siding</h4>
+            <p>T.E.A.M. Builders offers siding repair and installation services in Cedar Falls and Cedar Rapids, IA and
+                surrounding areas. Installing new siding will:</p>
+            <ol>
+                <li>Improve the appearance of your home</li>
+                <li>Increase your homes's energy efficiency</li>
+                <li>Splurge on a few high-end materials</li>
+                <li>Create the look of your dream home</li>
+            </ol>
+            <h4 class="h1">Our Work</h4>
+            <div class="our-work-images">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingCR.jpg"
+                    alt="Blue Vinyl Siding in Cedar Rapids">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingFrontView.jpg"
+                    alt="Blue Vinyl Siding Front View">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/graySidingFrontPorchView.jpg"
+                    alt="Gray Siding Front Porch View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/grayVinylSiding.jpg"
+                    alt="Gray Vinyl Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/vinylGraySiding.jpg"
+                    alt="Vinyl Gray Siding">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/innerViewGraySiding.jpg"
+                    alt="Inner View of Gray Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSiding.jpg"
+                    alt="Navy Blue Siding">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSidingOverheadView.jpg"
+                    alt="Navy Blue Siding Overhead View">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/navySidingWithViewOfTree.jpg"
+                    alt="Navy Siding with Tree in the Foreground">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSiding.jpg"
+                    alt="Teal Green Siding">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenCloseUpSiding.jpg"
+                    alt="Teal Green Close Up View of Siding">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingCompositeStairs.jpg"
+                    alt="Teal Green Siding and Composite Stairs">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingViewFromLeft.jpg"
+                    alt="Teal Green Siding View from Left">
+                <img class="our-work-image"
+                    src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenVinylSiding.jpg"
+                    alt="Teal Green Vinyl Siding">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesiding.jpg"
+                    alt="Blue Siding">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesidingwithbrick.jpg"
+                    alt="Blue Siding w/ Brick">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/redsiding.jpg"
+                    alt="Red Siding">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/woodshutters.jpg"
+                    alt="White Siding w/ Wood Shutters">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png"
+                    alt="New Blue Siding">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding 1">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding 2">
+                <img class="our-work-image"
+                    src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding 3">
+            </div>
+        </div>
     </div>
-    <p>Have you grown to hate the appearance of your outdated siding? It’s time to replace it. T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls and Cedar Rapids, IA area. 
-    </p>
-    <br />
-    <p>You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly. We also specialize in adding stone wainscoting and shake peakes on gables for additional curb appeal to the exterior of your home. Look no further as we also provide siding design services to show you what your home will look like with the use of our siding installers.</p>
-    <br />
-    <h3>The Norandex vinyl siding and Versetta stone wainscoting we install:</h3>
-    <div class="feature-container">
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Comes in a wide variety of colors and textures</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Is durable and requires little maintenance</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Can reduce your energy bills</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Will protect your home from the elements</p>
-      </div>
-    </div>
-    <p>Get in touch with us today to speak with a siding contractor and schedule vinyl siding installation services. Call (319) 481-8326</p>
-    <br />
-      <div class="text-align-left">
-          <br />
-          <h4 class="h1">Boost Your Curb Appeal With New Siding</h4>
-          <p>T.E.A.M. Builders offers siding repair and installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Installing new siding will:</p>
-          <ol>
-            <li>Improve the appearance of your home</li>
-            <li>Increase your homes's energy efficiency</li>
-            <li>Splurge on a few high-end materials</li>
-            <li>Create the look of your dream home</li>
-          </ol>
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingCR.jpg" alt="Blue Vinyl Siding in Cedar Rapids">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingFrontView.jpg" alt="Blue Vinyl Siding Front View">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/graySidingFrontPorchView.jpg" alt="Gray Siding Front Porch View">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/grayVinylSiding.jpg" alt="Gray Vinyl Siding">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/vinylGraySiding.jpg" alt="Vinyl Gray Siding">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/innerViewGraySiding.jpg" alt="Inner View of Gray Siding">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSiding.jpg" alt="Navy Blue Siding">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSidingOverheadView.jpg" alt="Navy Blue Siding Overhead View">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navySidingWithViewOfTree.jpg" alt="Navy Siding with Tree in the Foreground">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSiding.jpg" alt="Teal Green Siding">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenCloseUpSiding.jpg" alt="Teal Green Close Up View of Siding">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingCompositeStairs.jpg" alt="Teal Green Siding and Composite Stairs">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingViewFromLeft.jpg" alt="Teal Green Siding View from Left">
-            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenVinylSiding.jpg" alt="Teal Green Vinyl Siding">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesiding.jpg" alt="Blue Siding">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesidingwithbrick.jpg" alt="Blue Siding w/ Brick">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/redsiding.jpg" alt="Red Siding">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/woodshutters.jpg" alt="White Siding w/ Wood Shutters">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Blue Siding">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding 1">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding 2">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding 3">
-          </div>
-      </div>
-    </div>
-     <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Whether your siding is damaged and just needs minor repairs or if you’re in need of a full siding replacement, we can handle it. Heck, we can even paint you existing aluminum or wood siding to change it’s apperance if that’s all you need! Rely on T.E.A.M. Builders LTD to change the apperance of your home!
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
-      </div>
+    <section class="gradient-banner">
+        <div class="gradient-content">
+            <span>
+                Whether your siding is damaged and just needs minor repairs or if you’re in need of a full siding
+                replacement, we can handle it. Heck, we can even paint you existing aluminum or wood siding to change
+                it’s apperance if that’s all you need! Rely on T.E.A.M. Builders LTD to change the apperance of your
+                home!
+            </span>
+            <div class="triangle"></div>
+            <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
+        </div>
     </section>
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
-  </body>
+</body>
+
 </html>
